--- a/src/room/room.ejs
+++ b/src/room/room.ejs
@@ -1,4 +1,4 @@
-<snippet name="Room" start styles="./room/roomStyle.css">
+<snippet name="Room" styles="./room/roomStyle.css">
 
 <div id="contents">
     <div id="bg"></div>
