--- a/src/meta/styles/stylesheet.css
+++ b/src/meta/styles/stylesheet.css
@@ -148,6 +148,10 @@ CUSTOM STYLES
 OVERRIDING DEFAULT CSS STYLES
 */
 
+body {
+  color: #ffffff;
+}
+
 small {
   font-size: 70%;
 }
@@ -177,4 +181,12 @@ div {
 hr {
   height: 0px;
   margin: 3px 0;
+}
+
+button {
+  background-color: #000;
+  color: #fff;
+}
+button:hover {
+  background-color: #444;
 }
