Update node modules, including iffinity

--- a/src/room/room.ejs
+++ b/src/room/room.ejs
@@ -13,9 +13,9 @@
                 <div id="bottomContent" class="blackBg2">
                 </div>
                 <div id="menu" class="blackBg2">
-                    <button id="inventory">Inventory</button>
-                    <button id="map">Map</button>
-                    <button id="party">Party</button>
+                    <button type="button" id="inventory">Inventory</button>
+                    <button type="button" id="map">Map</button>
+                    <button type="button" id="party">Party</button>
                 </div>
             </div>
         </div>
