--- a/src/start.ejs
+++ b/src/start.ejs
@@ -9,7 +9,7 @@
             <div id="tophalf" class="absoluteAlign">
             </div>
             <div id="bottomhalf" class="absoluteAlign blackBg">
-                <button id="start-game">Start Game</button>
+                <button type="button" id="start-game">Start Game</button>
             </div>
         </div>
     </div></div>
