--- a/src/battle/battle.ejs
+++ b/src/battle/battle.ejs
@@ -7,10 +7,10 @@
 
         <div id="screenContents" class="absoluteAlign">
             <div id="endScreen" class="hidden">
-                <div> 
+                <div>
                     <p>THE BATTLE IS OVER</p>
 
-                    <p><button id="next">Next</button></p>
+                    <p><button type="button" id="next">Next</button></p>
                 </div>
             </div>
 
