Start of battle log

--- a/src/battle/battle.ejs
+++ b/src/battle/battle.ejs
@@ -15,11 +15,14 @@
             </div>
 
             <div id="tophalf" class="absoluteAlign">
-                <div id="messageContainer">
-                </div>
+                <div id="messageContainer"></div>
             </div>
             <div id="bottomhalf" class="absoluteAlign blackBg">
-                <div id="bottomContainer"></div>
+                <button type="button" id="logButton">Battle Log</button>
+                <div id="battleLog" class="hidden"></div>
+
+                <div id="bottomContainer">
+                </div>
             </div>
         </div>
     </div></div>
