--- a/src/meta/styles/stylesheet.css
+++ b/src/meta/styles/stylesheet.css
@@ -153,7 +153,7 @@ body {
 }
 
 small {
-  font-size: 75%;
+  font-size: 70%;
 }
 
 /* For replacelink */
@@ -189,4 +189,5 @@ button {
 }
 button:hover {
   background-color: #444;
+  cursor: pointer;
 }
