--- a/src/battle/battleStyle.css
+++ b/src/battle/battleStyle.css
@@ -51,6 +51,11 @@
 #battleLog {
   overflow: scroll;
   height: 100%;
+  padding: 0 7px 0 7px;
+
+  background-color: #001020;
+  border: 1px dotted #ccc;
+  border-radius: 10px;
 }
 
 /* General Styles */
