--- a/src/battle/battleStyle.css
+++ b/src/battle/battleStyle.css
@@ -48,16 +48,6 @@
   right: 5px;
 }
 
-#battleLog {
-  overflow: scroll;
-  height: 100%;
-  padding: 0 7px 0 7px;
-
-  background-color: #001020;
-  border: 1px dotted #ccc;
-  border-radius: 10px;
-}
-
 /* General Styles */
 
 .outlineDiv {
@@ -91,7 +81,7 @@
   position: absolute;
 }
 
-.tophalf-tip {
+.topHalf-tip {
   width: 400%;
 }
 
