--- a/src/meta/styles/stylesheet.css
+++ b/src/meta/styles/stylesheet.css
@@ -80,7 +80,7 @@ GENERAL STYLE
   height: 98%;
   margin: auto;
 }
-#tophalf {
+#topHalf {
   width: 100%;
   height: 50%;
   bottom: 50%;
@@ -98,6 +98,16 @@ GENERAL STYLE
 /*
 CUSTOM STYLES
 */
+
+.menuPanel {
+  overflow: scroll;
+  padding: 3px 7px 3px 7px;
+  margin: 10px;
+
+  background-color: #001020;
+  border: 1px dotted #ccc;
+  border-radius: 10px;
+}
 
 .blackBg {
   color: white;
@@ -167,11 +177,11 @@ small {
 a {
   color: #aaddaa;
   text-decoration: inherit;
+  cursor: pointer;
 }
 a:hover {
   text-decoration: inherit;
   color: #339988;
-  cursor: pointer;
 }
 
 div {
@@ -186,8 +196,8 @@ hr {
 button {
   background-color: #000;
   color: #fff;
+  cursor: pointer;
 }
 button:hover {
   background-color: #444;
-  cursor: pointer;
 }
