--- a/src/start.ejs
+++ b/src/start.ejs
@@ -6,7 +6,7 @@
         <div id="screenBg"></div>
 
         <div id="screenContents" class="absoluteAlign">
-            <div id="tophalf" class="absoluteAlign">
+            <div id="topHalf" class="absoluteAlign">
             </div>
             <div id="bottomhalf" class="absoluteAlign blackBg">
                 <button type="button" id="start-game">Start Game</button>
@@ -26,11 +26,10 @@ $(function () {
         const player1_real = ref.PlayerSoul.createPlayerSoul(player1);
         ref.GameState.addSoul(player1_real);
 
-        /*
         const player2 = new ref.IndividualSoul(ref.SOUL_LIST.Adware, 1);
-        player2.changeName("death");
-        ref.GameState.addSoul(player2);
-        */
+        player2.changeName("newbie");
+        const player2_real = ref.PlayerSoul.createPlayerSoul(player2);
+        ref.GameState.addSoul(player2_real);
 
         story.showSnippet("Room", false);
     };
