Split individualSoul and battleSoul
There are now RenderSoul and RenderBattleSoul
classes that handle the HTML/visual side of things.

renderer: RenderBattleSoul is a property of BattleSoul.

--- a/src/meta/styles/stylesheet.css
+++ b/src/meta/styles/stylesheet.css
@@ -109,6 +109,10 @@ CUSTOM STYLES
   border-radius: 10px;
 }
 
+.menuButton {
+  z-index: 2;
+}
+
 .hoverDiv {
   position: absolute;
   z-index: 3;
