--- a/src/meta/styles/stylesheet.css
+++ b/src/meta/styles/stylesheet.css
@@ -95,6 +95,16 @@ GENERAL STYLE
   padding: 10px;
 }
 
+#menuButtons {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-size: 85%;
+
+    display: flex;
+    gap: 10px;
+}
+
 /*
 CUSTOM STYLES
 */
