--- a/src/meta/styles/stylesheet.css
+++ b/src/meta/styles/stylesheet.css
@@ -237,3 +237,36 @@ button {
 button:hover {
   background-color: #444;
 }
+
+/* CUSTOM STYLINGS (because reset.css) */
+
+h1 {
+  font-size: 200%;
+}
+h2 {
+  font-size: 150%;
+}
+h3 {
+  font-size: 125%;
+}
+h4 {
+  font-size: 115%;
+}
+h5 {
+  font-size: 110%;
+}
+h1, h2, h3, h4, h5 {
+  font-weight: bold;
+  margin: 15px 0 15px 0;
+}
+h4, h5 {
+  margin: 9px 0 9px 0;
+}
+
+div, span {
+  margin: 3px 0 3px 0;
+}
+
+p {
+  margin: 12px 0 12px 0;
+}
