--- a/src/room/room.ejs
+++ b/src/room/room.ejs
@@ -1,4 +1,4 @@
-<snippet name="Room" styles="./room/roomStyle.css; ../meta/styles/partyStyle.css; ../meta/styles/inventoryStyle.css">
+<snippet name="Room" styles="./room/roomStyle.css; ../meta/styles/partyStyle.css; ../meta/styles/inventoryStyle.css; ../battle/battleStyle.css">
 
 <div id="contents">
     <div id="bg"></div>
