--- a/src/room/roomStyle.css
+++ b/src/room/roomStyle.css
@@ -1,7 +1,7 @@
 #roomName {
     width: fit-content;
     height: 7%;
-    padding: 0 5px 0 5px;
+    padding: 5px;
     float: right;
 
     font-size: 85%;
