--- a/src/meta/styles/reset.css
+++ b/src/meta/styles/reset.css
@@ -76,3 +76,38 @@ table {
 body {
 	line-height: 1.3;
 }
+
+h1 {
+  font-size: 200%;
+  margin: .67em 0;
+}
+h2 {
+  font-size: 140%;
+  margin: .75em 0
+}
+h3 {
+  font-size: 125%;
+  margin: 0.83em 0
+}
+h4 {
+  font-size: 115%;
+  margin: 0.4em 0;
+}
+h5 {
+  font-size: 110%;
+  margin: 0.2em 0;
+}
+h6 {
+  margin: 0.1em 0;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+}
+
+body > div, span {
+  margin: 3px 0 3px 0;
+}
+
+h4, p, blockquote, ul, fieldset, form, ol, dl, dir, menu {
+  margin: 1em 0;
+}
