--- a/src/meta/styles/inventoryStyle.css
+++ b/src/meta/styles/inventoryStyle.css
@@ -1,3 +1,22 @@
+#inventory {
+  overflow: hidden;
+}
+#inventoryGrid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  height: calc(100% - 25px);
+  width: calc(100% - 10px);
+  grid-gap: 5px;
+}
+
+.choice-wrapper {
+  width: 100%;
+}
+
+#itemList {
+  grid-column: 2;
+}
+
 .itemKeyDiv {
   margin: 5px;
   border: 1px solid #fff;
@@ -7,7 +26,9 @@
   cursor: pointer;
   display: inline-block;
 
-  width: 45%;
+  font-size: 0.9rem;
+
+  width: 98%;
 }
 
 .countText {
@@ -15,14 +36,8 @@
 }
 
 #itemInfoDiv {
-  height: 25%;
-  top: auto;
-  font-size: 85%;
-}
-
-#itemUseMenu {
-  height: 62%;
-  top: 8%;
-  font-size: 85%;
-  overflow: visible;
+  font-size: 0.85rem;
+  padding-top: 7px;
+  grid-row: 1;
+  height: 100%;
 }
