Add working (ish) battle item menu + update npm packages

--- a/src/battle/battle.ejs
+++ b/src/battle/battle.ejs
@@ -1,4 +1,4 @@
-<snippet name="Battle" styles="./battle/battleStyle.css">
+<snippet name="Battle" styles="./battle/battleStyle.css; meta/styles/inventoryStyle.css">
 
 <div id="contents">
     <div id="bg"></div>
