More work on inventory menu, various changes
- add #screenCover
- replace a lot of erroneous forEach loops with
for (const x in y) loops that actually can return inside the loop
- add useMessage for items (not fully implemented)
- css tweaks
- un-minify build (why did I have it minified?)

--- a/src/battle/battle.ejs
+++ b/src/battle/battle.ejs
@@ -2,6 +2,7 @@
 
 <div id="contents">
     <div id="bg"></div>
+    <div id="screenCover" class="fullscreenBg"></div>
     <div id="passages"><div class="passage">
         <div id="screenBg"></div>
 
