--- a/src/room/room.ejs
+++ b/src/room/room.ejs
@@ -1,7 +1,8 @@
-<snippet name="Room" styles="./room/roomStyle.css; ../meta/styles/partyStyle.css; ../meta/styles/mapStyle.css; ../meta/styles/inventoryStyle.css; ../battle/battleStyle.css">
+<snippet name="Room" styles="./room/roomStyle.css; ../meta/styles/partyStyle.css; ../meta/styles/mapStyle.css; ../meta/styles/inventoryStyle.css">
 
 <div id="contents">
-    <div id="bg"></div>
+    <div id="bg" class="fullscreenBg"></div>
+    <div id="screenCover" class="fullscreenBg"></div>
     <div id="passages"><div class="passage">
         <div id="screenBg"></div>
 
