--- a/src/meta/styles/stylesheet.css
+++ b/src/meta/styles/stylesheet.css
@@ -179,6 +179,21 @@ CUSTOM STYLES
   border: 3px solid #ffc740 !important;
 }
 
+/* General Styles from battleStyle */
+
+.noClick {
+  color: #666;
+  background-color: #333;
+}
+
+.choice-wrapper {
+  display: inline-block;
+  margin: 0.5%;
+}
+.choice-wrapper > button {
+  width: 100%;
+}
+
 /*
 OVERRIDING DEFAULT CSS STYLES
 */
