--- a/src/start.ejs
+++ b/src/start.ejs
@@ -2,6 +2,7 @@
 
 <div id="contents">
     <div id="bg"></div>
+    <div id="screenCover" class="fullscreenBg"></div>
     <div id="passages"><div class="passage">
         <div id="screenBg"></div>
 
