Reorganize battle folder, add #useMessageDiv style

--- a/src/meta/styles/inventoryStyle.css
+++ b/src/meta/styles/inventoryStyle.css
@@ -46,3 +46,12 @@
   height: 20%;
   top: auto;
 }
+
+#useMessageDiv {
+  height: fit-content;
+  top: auto;
+}
+#useMessageDiv > div {
+  width: calc(100% - 2rem);
+  float: right;
+}
