Add code from radnyx/crystal
Adds a lot of dependencies too
vapormall-ps is a new dependency (separate github repo)
Not yet a submodule, make change later?
Not yet integrated but proof it works

crystal assets included in export because I was too lazy
to move them to assets and include them in the .gitignore,
they are small files so it's probably fine

--- a/src/start.ejs
+++ b/src/start.ejs
@@ -4,6 +4,7 @@
 </div>
 <div id="bottomhalf" class="absoluteAlign blackBg">
     <button type="button" id="start-game">Start Game</button>
+    <p>[[Test Link|Battle2]]</p>
 </div>
 
 <%
